# ICS161GameEngine

./: .gitignore  GameNotes.txt
GameEngineProject/: GameEngineProject.sln
GameEngineProject/GameEngineProject/: Actor.cpp  Actor.h  ActorHandler.cpp  ActorHandler.h  Camara.cpp  Camara.h  Camera.cpp  Camera.h  Character.h  Enemy.h  EventHandler.h  Game.cpp  Game.h  GameEngineProject.vcxproj  GameEngineProject.vcxproj.filters  GameEvent.cpp  GameEvent.h  GameEventHandler.cpp  GameEventHandler.h  Main.cpp  Map.cpp  Map.h  MapPathNode.h  PathFinder.cpp  PathFinder.h  Player.cpp  Player.h  RenderStruct.h  SaveHandler.h  SaveHandlercpp.cpp  SoundHandler.cpp  SoundHandler.h  Source.cpp  Sprite.cpp  Sprite.h  SpriteDemo.cpp  SpriteHandler.cpp  SpriteHandler.h  TriggerPoint.h  UIHandler.cpp  (+2 more)
GameEngineProject/GameEngineProject/Debug/: vc120.idb
GameEngineProject/GameEngineProject/Debug/GameEngi.F7C2ECF2.tlog/: CL.read.1.tlog  CL.write.1.tlog  GameEngineProject.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GameEngineProject/GameEngineProject/cory/: CMakeLists.txt  Makefile  Map.cpp  Map.h  MapDemo.cpp  map.tmx  map.tmx.bak
GameEngineProject/GameEngineProject/cory/osx/lib/: libtmx0.0.3.0.dylib
GameEngineProject/GameEngineProject/libtmx-0.3.0/src/include/tmx/: Cell.h  Component.h  Image.h  ImageLayer.h  Layer.h  Map.h  Object.h  (+5 more)
GameEngineProject/GameEngineProject/libtmx-0.3.0/src/lib/: Component.cc  Map.cc  Parser.cc  TileSet.cc
Resources/Music/Sound Effects/Samus/: ReadMe.rtf
Resources/SDL2-2.0.3/include/: res_path.h
(+154 files in other folders)
